set spacing correctly

--- a/src/styles/toolbox.module.css
+++ b/src/styles/toolbox.module.css
@@ -8,7 +8,7 @@
 }
 
 .toolbox.footer-spacing {
-    bottom: 5em;
+    bottom: 6em;
 }
 
 .toolbox-item-container {
